--- a/client/src/components/DocumentSelector/index.css
+++ b/client/src/components/DocumentSelector/index.css
@@ -7,6 +7,13 @@
   margin: 20px 0;
 }
 
+.document-name {
+  max-width: 250px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .document-uploader-helper-input {
   width: 100%;
   height: 100%;
