--- a/client/src/components/Button/Button.css
+++ b/client/src/components/Button/Button.css
@@ -1,24 +1,21 @@
 .button {
+  display: flex;
+  justify-content: center;
   position: relative;
   background-color: var(--primary-500);
   color: var(--white);
   border: 1px solid transparent;
   padding: 7px 16px;
-  letter-spacing: -0.09px;
+  line-height: 1.5;
   min-width: 150px;
 
   align-items: center;
   border-radius: 35px;
-  box-shadow: none !important;
-  display: inline-flex;
   font-size: 14px;
   font-weight: 500;
   justify-content: center;
-  line-height: 1.7148;
 
-  font-size: 14px;
-
-  transition-duration: 0.3s;
+  transition-duration: 0.2s;
   transition-property: all;
   transition-timing-function: ease;
 
@@ -30,7 +27,7 @@
   border-color: var(--primary-500);
   color: var(--primary-500);
 
-  transition-duration: 0.3s;
+  transition-duration: 0.2s;
   transition-property: all;
   transition-timing-function: ease;
 }
@@ -40,6 +37,9 @@
   background-color: var(--white);
   border-color: var(--primary-500);
   color: var(--primary-500);
+}
+.button.loading {
+  opacity: 0.6;
 }
 
 .button.inverted:hover {
