--- a/client/src/components/DocumentSelector/DocumentSelector.css
+++ b/client/src/components/DocumentSelector/DocumentSelector.css
@@ -7,7 +7,7 @@
   margin: 20px 0;
 }
 
-.document-name {
+.document-uploader-file-name {
   max-width: 250px;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -47,6 +47,7 @@
   font-weight: 500;
   text-align: center;
   cursor: pointer;
+  color: var(--gray-700);
 }
 
 .document-uploader-drag-drop-container {
