--- a/client/src/components/ExtractedDatesCalendar/ExtractedDatesCalendar.css
+++ b/client/src/components/ExtractedDatesCalendar/ExtractedDatesCalendar.css
@@ -1,3 +1,5 @@
+/* react-calendar overrides */
+
 .react-calendar {
   width: 600px;
   font-family: inherit;
@@ -6,8 +8,13 @@
   padding: 20px;
 }
 
+.react-calendar__navigation button {
+  font-weight: 700;
+}
+
 .react-calendar button {
   overflow: visible !important;
+  border: 2px solid #fff;
 }
 
 .react-calendar__tile {
@@ -32,6 +39,10 @@
 
 .react-calendar__tile--now {
   background-color: var(--white);
+}
+
+.react-calendar__navigation button:enabled:hover {
+  background-color: var(--primary-300);
 }
 
 .react-calendar__month-view__weekdays__weekday abbr {
