--- a/client/src/components/ExtractedDatesCalendar/ExtractedDatesCalendar.css
+++ b/client/src/components/ExtractedDatesCalendar/ExtractedDatesCalendar.css
@@ -26,7 +26,10 @@
   background-color: var(--primary-500);
   color: var(--white);
 }
-
+.react-calendar__tile--hasActive {
+  background-color: var(--primary-500);
+  color: var(--white);
+}
 .react-calendar__tile:enabled:hover {
   background-color: var(--primary-300);
   color: var(--gray-600);
